# tum-lk-cpp

./: .gitignore  README.md
doc/: .gitignore  besprechung.tex  packages.md  todo.md
src/amcl_pose_tf_broadcaster/: CMakeLists.txt  package.xml
src/amcl_pose_tf_broadcaster/src/: main.cpp
src/amcl_tf_broadcaster/: CMakeLists.txt  package.xml
src/amcl_tf_broadcaster/src/: main.cpp
src/aruco_code_detection/: CMakeLists.txt  package.xml
src/aruco_code_detection/msg/: DetectedCode.msg
src/aruco_code_detection/src/: main.cpp
src/aruco_ros/launch/: all_markers.launch  all_markers_single.launch  camera.launch  marker_publisher.launch  single.launch  single_marker_publisher.launch
src/aruco_tf_broadcaster/: CMakeLists.txt  package.xml
src/aruco_tf_broadcaster/src/: main.cpp
src/bringup_launchers/: CMakeLists.txt  package.xml
src/bringup_launchers/launch/: normal.launch  smooth.launch
src/bringup_launchers/param/move_base/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
src/bringup_launchers/param/velocity_muxer/: mux.yaml
src/bringup_launchers/param/velocity_smoother/: config.yaml
src/cli/: CMakeLists.txt  package.xml
src/cli/src/: Cmd.h  CmdGetPos.cpp  CmdGetPos.h  CmdSetGoalId.cpp  CmdSetGoalId.h  CommandLine.cpp  CommandLine.h  Parser.cpp  Parser.h  main.cpp
src/driver/: CMakeLists.txt  package.xml
src/driver/launch/: start.launch  test.launch
src/driver/src/: Driver.cpp  Driver.h  Mover.cpp  Mover.h  Rotator.cpp  Rotator.h  State.h  StateBumperhit.cpp  StateBumperhit.h  StateIdle.cpp  StateIdle.h  StateManager.cpp  StateManager.h  StateMovingLocation.cpp  StateMovingLocation.h  StateMovingTwist.cpp  StateMovingTwist.h  StateRandomWalk.cpp  StateRandomWalk.h  StateRotating.cpp  StateRotating.h  TurtleBot.cpp  TurtleBot.h  Utility.h  main.cpp  multiple_goals.cpp  single_goal.cpp
src/driver_old/: CMakeLists.txt  package.xml
src/driver_old/launch/: start.launch
src/driver_old/src/: multiple_goals.cpp  single_goal.cpp
src/friend/: CMakeLists.txt  package.xml
src/friend/launch/: gmapping_anna.launch
src/goalfinder/: CMakeLists.txt  package.xml
src/goalfinder/launch/: _amcl.launch  _markers.launch  goalfinder.launch  rviz_slam.launch  slam.launch
src/goalfinder/map/: room_-1981.yaml
src/goalfinder/msg/: Goals.msg  Path.msg
src/goalfinder/rviz/: goals.rviz  slam.rviz
src/goalfinder/src/: TargetDetermination.cpp  TargetDetermination.h  main.cpp
src/move_base_launcher/: CMakeLists.txt  package.xml
src/move_base_launcher/launch/: normal.launch  smooth.launch
src/move_base_launcher/param/velocity_smoother/: config.yaml
src/obstacle_detection/: CMakeLists.txt  package.xml
src/obstacle_detection/msg/: Obstacle.msg  ObstacleArray.msg
src/obstacle_detection/src/: main.cpp
src/pathfinder/: CMakeLists.txt  package.xml
src/pathfinder/launch/: amcl.launch  gmapping_test.launch  goalfinder.launch  move_base.launch  move_base_smooth.launch  pathfinder.launch  rviz_goals.launch  slam.launch
src/pathfinder/map/: 2019-01-29.pgm  2019-01-29.yaml  good.pgm  good.yaml  quick.pgm  quick.yaml
src/pathfinder/msg/: Goal.msg  Goals.msg  Path.msg
src/pathfinder/param/move_base/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  move_base_params.yaml
src/pathfinder/rviz/: goals.rviz
src/pathfinder/src/: Pathfinder.cpp  Pathfinder.h  Planner.cpp  Planner.h  TargetDetermination.cpp  TargetDetermination.h  main.cpp
src/rplidar_ros/launch/: rplidar.launch
src/stopper/: CMakeLists.txt  package.xml
src/stopper/src/: main.cpp
src/stopper_test/: CMakeLists.txt  aimless_test.launch  package.xml  test.launch
src/stopper_test/src/: Rotator.cpp  Rotator.h  Stopper.cpp  Stopper.h  main.cpp  main_stopper.cpp
