<?xml version="1.0"?>
<package>
  <name>aruco_code_detection</name>
  <version>1.0.0</version>
  <description>This package detects ArUco codes with a given ID.</description>

  <maintainer email="stefan.urban@tum.de">Stefan Urban</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
