<?xml version="1.0"?>
<package>
  <name>bringup_launchers</name>
  <version>1.0.0</version>
  <description>Central folder for files needed to start move base and other basic operations properly.</description>

  <maintainer email="stefan.urban@tum.de">Stefan Urban</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
