<?xml version="1.0"?>
<package>
  <name>cli</name>
  <version>1.0.0</version>
  <description>Provides a simple CLI to send commands to the robot.</description>

  <maintainer email="stefan.urban@tum.de">Stefan Urban</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
