<?xml version="1.0"?>
<package>
  <name>goalfinder</name>
  <version>1.0.0</version>
  <description>Finds a valid path from current position to a given destination. Can outmaneuver obstacles that are inbetween.</description>

  <maintainer email="stefan.urban@tum.de">Stefan Urban</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>aruco_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>aruco_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
