<?xml version="1.0"?>
<package>
  <name>pathfinder</name>
  <version>0.0.0</version>
  <description>The pathfinder package</description>

  <maintainer email="stefan.urban@tum.de">Stefan Urban</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>goalfinder</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>goalfinder</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>
